objects/ssot__AgentServicePresence__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AtCapacityDuration__c</fullName>
        <label>At Capacity Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageCapacity__c</fullName>
        <label>Average Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ConfiguredCapacity__c</fullName>
        <label>Configured Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Agent Service Presence Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdleDuration__c</fullName>
        <label>Idle Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAway__c</fullName>
        <label>Away</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCurrentState__c</fullName>
        <label>Current State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicePresenceStatusId__c</fullName>
        <label>Service Presence Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusDurationSeconds__c</fullName>
        <label>Status Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StatusEndDate__c</fullName>
        <label>Status End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatusStartDate__c</fullName>
        <label>Status Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UserId__c</fullName>
        <label>User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761226068_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentServicePresence_UserId_map_User_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>AgentServicePresence_UserId_map_User_rel</relationshipLabel>
        <relationshipName>rel_1697761226068_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761228130_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentServicePresence_ServicePresence_rel</label>
        <referenceTo>ssot__ServicePresenceStatus__dlm</referenceTo>
        <relationshipLabel>AgentServicePresence_ServicePresence_rel</relationshipLabel>
        <relationshipName>rel_1697761228130_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>